fix main style issues autocomplete popover and add keyboard accessibility - fix spacing and background color - highlight selection blue - give focus to first suggestion

--- a/fractal-gtk/res/app.css
+++ b/fractal-gtk/res/app.css
@@ -139,6 +139,19 @@ row .timestamp {
 .messages-history row:selected .msg-emote
 { color: @theme_selected_fg_color; }
 
+.autocomplete,
+.autocomplete list,
+.autocomplete row:not(:hover):not(:selected) {
+  background-color: @theme_bg_color;
+}
+
+.autocomplete .frame {
+ border: 0;
+}
+
+.autocomplete row {
+  border-radius: 6px;
+}
 
 .invite-selected,
 .invite-selected row {
